@@ -35,96 +35,51 @@ import sbtprotoc.ProtocPlugin.autoImport._
 import xsbti.compile.CompileAnalysis
 
 import Checkstyle._
+import ShadedIcebergBuild._
 import Mima._
 import Unidoc._
 
 // Scala versions
-val scala212 = "2.12.18"
-val scala213 = "2.13.13"
-val all_scala_versions = Seq(scala212, scala213)
+val scala213 = "2.13.17"
+val all_scala_versions = Seq(scala213)
 
 // Due to how publishArtifact is determined for javaOnlyReleaseSettings, incl. storage
 // It was necessary to change default_scala_version to scala213 in build.sbt
 // to build the project with Scala 2.13 only
 // As a setting, it's possible to set it on command line easily
-// sbt 'set default_scala_version := 2.13.13' [commands]
+// sbt 'set default_scala_version := 2.13.16' [commands]
 // FIXME Why not use scalaVersion?
 val default_scala_version = settingKey[String]("Default Scala version")
-Global / default_scala_version := scala212
+Global / default_scala_version := scala213
 
-val LATEST_RELEASED_SPARK_VERSION = "3.5.3"
-val SPARK_MASTER_VERSION = "4.0.2-SNAPSHOT"
+// Scala version to use for all projects
+scalaVersion := default_scala_version.value
+
+// crossScalaVersions must be set to Nil on the root project to avoid conflicts
+crossScalaVersions := Nil
+
+val internalModuleNames = settingKey[Set[String]]("Internal module artifact names to exclude from POM")
+
+// Spark version to delta-spark and its dependent modules
+// For more information see CrossSparkVersions.scala
 val sparkVersion = settingKey[String]("Spark version")
-spark / sparkVersion := getSparkVersion()
-kernelSpark / sparkVersion := getSparkVersion()
-connectCommon / sparkVersion := getSparkVersion()
-connectClient / sparkVersion := getSparkVersion()
-connectServer / sparkVersion := getSparkVersion()
-sharing / sparkVersion := getSparkVersion()
 
 // Dependent library versions
-val defaultSparkVersion = LATEST_RELEASED_SPARK_VERSION
-val flinkVersion = "1.16.1"
-val hadoopVersion = "3.3.4"
+val defaultSparkVersion = SparkVersionSpec.DEFAULT.fullVersion // Spark version to use for testing in non-delta-spark related modules
+val hadoopVersion = "3.4.2"
 val scalaTestVersion = "3.2.15"
 val scalaTestVersionForConnectors = "3.0.8"
 val parquet4sVersion = "1.9.4"
-
-// Versions for Hive 3
-val hadoopVersionForHive3 = "3.1.0"
-val hiveVersion = "3.1.2"
-val tezVersion = "0.9.2"
-
-// Versions for Hive 2
-val hadoopVersionForHive2 = "2.7.2"
-val hive2Version = "2.3.3"
-val tezVersionForHive2 = "0.8.4"
-
 val protoVersion = "3.25.1"
 val grpcVersion = "1.62.2"
-
-scalaVersion := default_scala_version.value
-
-// crossScalaVersions must be set to Nil on the root project
-crossScalaVersions := Nil
 
 // For Java 11 use the following on command line
 // sbt 'set targetJvm := "11"' [commands]
 val targetJvm = settingKey[String]("Target JVM version")
-Global / targetJvm := "8"
+Global / targetJvm := "11"
 
 lazy val javaVersion = sys.props.getOrElse("java.version", "Unknown")
 lazy val javaVersionInt = javaVersion.split("\\.")(0).toInt
-/**
- * Returns the current spark version, which is the same value as `sparkVersion.value`.
- *
- * This logic exists in a separate method because some call sites cannot access `sparkVersion.value`
- * e.g. callers that are not inside tasks or setting macros.
- */
-def getSparkVersion(): String = {
-  val latestReleasedSparkVersionShort = getMajorMinorPatch(LATEST_RELEASED_SPARK_VERSION) match {
-    case (maj, min, _) => s"$maj.$min"
-  }
-  val allValidSparkVersionInputs = Seq(
-    "master",
-    "latest",
-    SPARK_MASTER_VERSION,
-    LATEST_RELEASED_SPARK_VERSION,
-    latestReleasedSparkVersionShort
-  )
-
-  // e.g. build/sbt -DsparkVersion=master, build/sbt -DsparkVersion=4.0.0-SNAPSHOT
-  val input = sys.props.getOrElse("sparkVersion", LATEST_RELEASED_SPARK_VERSION)
-  input match {
-    case LATEST_RELEASED_SPARK_VERSION | "latest" | `latestReleasedSparkVersionShort` =>
-      LATEST_RELEASED_SPARK_VERSION
-    case SPARK_MASTER_VERSION | "master" =>
-      SPARK_MASTER_VERSION
-    case _ =>
-      throw new IllegalArgumentException(s"Invalid sparkVersion: $input. Must be one of " +
-          s"${allValidSparkVersionInputs.mkString("{", ",", "}")}")
-  }
-}
 
 lazy val commonSettings = Seq(
   organization := "io.delta",
@@ -194,67 +149,42 @@ def scalafmtCheckSettings(): Seq[Def.Setting[Task[CompileAnalysis]]] = Seq(
  * Note: we cannot access sparkVersion.value here, since that can only be used within a task or
  *       setting macro.
  */
-def crossSparkSettings(): Seq[Setting[_]] = getSparkVersion() match {
-  case LATEST_RELEASED_SPARK_VERSION => Seq(
-    scalaVersion := default_scala_version.value,
-    crossScalaVersions := all_scala_versions,
-    targetJvm := "8",
-    // For adding staged Spark RC versions, e.g.:
-    // resolvers += "Apache Spark 3.5.0 (RC1) Staging" at "https://repository.apache.org/content/repositories/orgapachespark-1444/",
-    Compile / unmanagedSourceDirectories += (Compile / baseDirectory).value / "src" / "main" / "scala-spark-3.5",
-    Test / unmanagedSourceDirectories += (Test / baseDirectory).value / "src" / "test" / "scala-spark-3.5",
-    Antlr4 / antlr4Version := "4.9.3",
-    Test / javaOptions ++= Seq("-Dlog4j.configurationFile=log4j2.properties"),
-
-    unidocSourceFilePatterns := Seq(SourceFilePattern("io/delta/tables/", "io/delta/exceptions/"))
-  )
-
-  case SPARK_MASTER_VERSION => Seq(
-    scalaVersion := scala213,
-    crossScalaVersions := Seq(scala213),
-    targetJvm := "17",
-    Compile / unmanagedSourceDirectories += (Compile / baseDirectory).value / "src" / "main" / "scala-spark-master",
-    Test / unmanagedSourceDirectories += (Test / baseDirectory).value / "src" / "test" / "scala-spark-master",
-    Antlr4 / antlr4Version := "4.13.1",
-    Test / javaOptions ++= Seq(
-      // Copied from SparkBuild.scala to support Java 17 for unit tests (see apache/spark#34153)
-      "--add-opens=java.base/java.lang=ALL-UNNAMED",
-      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-      "--add-opens=java.base/java.io=ALL-UNNAMED",
-      "--add-opens=java.base/java.net=ALL-UNNAMED",
-      "--add-opens=java.base/java.nio=ALL-UNNAMED",
-      "--add-opens=java.base/java.util=ALL-UNNAMED",
-      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
-      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
-      "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
-      "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
-      "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
-      "-Dlog4j.configurationFile=log4j2_spark_master.properties"
-    ),
-    // For Delta Connect tests we create a Spark Distribution from the classpath. For this to work
-    // dependencies on other modules need to be exposed as a JAR, and not as a directory of classes.
-    exportJars := true,
-    // Java-/Scala-/Uni-Doc Settings
-    // This isn't working yet against Spark Master.
-    // 1) delta-spark on Spark Master uses JDK 17. delta-iceberg uses JDK 8 or 11. For some reason,
-    //    generating delta-spark unidoc compiles delta-iceberg
-    // 2) delta-spark unidoc fails to compile. spark 3.5 is on its classpath. likely due to iceberg
-    //    issue above.
-  )
-}
-
 def runTaskOnlyOnSparkMaster[T](
     task: sbt.TaskKey[T],
     taskName: String,
     projectName: String,
     emptyValue: => T): Def.Initialize[Task[T]] = {
-  if (getSparkVersion() == SPARK_MASTER_VERSION) {
+  if (CrossSparkVersions.getSparkVersionSpec().isMaster) {
     Def.task(task.value)
   } else {
     Def.task {
       // scalastyle:off println
+      val masterVersion = SparkVersionSpec.MASTER.map(_.fullVersion).getOrElse("(no master version configured)")
       println(s"Project $projectName: Skipping `$taskName` as Spark version " +
-        s"${getSparkVersion()} does not equal $SPARK_MASTER_VERSION.")
+        s"${CrossSparkVersions.getSparkVersion()} does not equal $masterVersion.")
+      // scalastyle:on println
+      emptyValue
+    }
+  }
+}
+
+/**
+ * Note: we cannot access sparkVersion.value here, since that can only be used within a task or
+ *       setting macro.
+ */
+def runTaskOnlyOnSparkDefault[T](
+  task: sbt.TaskKey[T],
+  taskName: String,
+  projectName: String,
+  emptyValue: => T): Def.Initialize[Task[T]] = {
+  if (CrossSparkVersions.getSparkVersionSpec().isDefault) {
+    Def.task(task.value)
+  } else {
+    Def.task {
+      // scalastyle:off println
+      val defaultVersion = SparkVersionSpec.DEFAULT.fullVersion
+      println(s"Project $projectName: Skipping `$taskName` as Spark version " +
+        s"${CrossSparkVersions.getSparkVersion()} does not equal $defaultVersion.")
       // scalastyle:on println
       emptyValue
     }
@@ -266,24 +196,12 @@ lazy val connectCommon = (project in file("spark-connect/common"))
   .settings(
     name := "delta-connect-common",
     commonSettings,
-    crossSparkSettings(),
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
     releaseSettings,
-    Compile / compile := runTaskOnlyOnSparkMaster(
-      task = Compile / compile,
-      taskName = "compile",
-      projectName = "delta-connect-common",
-      emptyValue = Analysis.empty.asInstanceOf[CompileAnalysis]
-    ).value,
-    Test / test := runTaskOnlyOnSparkMaster(
-      task = Test / test,
-      taskName = "test",
-      projectName = "delta-connect-common",
-      emptyValue = ()).value,
-    publish := runTaskOnlyOnSparkMaster(
-      task = publish,
-      taskName = "publish",
-      projectName = "delta-connect-common",
-      emptyValue = ()).value,
+    // Export as JAR instead of classes directory. This ensures protobuf-generated classes
+    // (e.g., io.delta.connect.proto.DeltaCommand) are available as a JAR file in fullClasspath,
+    // which can be symlinked and picked up by Spark Submit's jars/* wildcard in connectClient tests.
+    exportJars := true,
     libraryDependencies ++= Seq(
       "io.grpc" % "protoc-gen-grpc-java" % grpcVersion asProtocPlugin(),
       "io.grpc" % "grpc-protobuf" % grpcVersion,
@@ -297,7 +215,7 @@ lazy val connectCommon = (project in file("spark-connect/common"))
     Compile / PB.targets := Seq(
       PB.gens.java -> (Compile / sourceManaged).value,
       PB.gens.plugin("grpc-java") -> (Compile / sourceManaged).value
-    ),
+    )
   )
 
 lazy val connectClient = (project in file("spark-connect/client"))
@@ -307,25 +225,7 @@ lazy val connectClient = (project in file("spark-connect/client"))
     name := "delta-connect-client",
     commonSettings,
     releaseSettings,
-    Compile / compile := runTaskOnlyOnSparkMaster(
-      task = Compile / compile,
-      taskName = "compile",
-      projectName = "delta-connect-client",
-      emptyValue = Analysis.empty.asInstanceOf[CompileAnalysis]
-    ).value,
-    Test / test := runTaskOnlyOnSparkMaster(
-      task = Test / test,
-      taskName = "test",
-      projectName = "delta-connect-client",
-      emptyValue = ()
-    ).value,
-    publish := runTaskOnlyOnSparkMaster(
-      task = publish,
-      taskName = "publish",
-      projectName = "delta-connect-client",
-      emptyValue = ()
-    ).value,
-    crossSparkSettings(),
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
     libraryDependencies ++= Seq(
       "com.google.protobuf" % "protobuf-java" % protoVersion % "protobuf",
       "org.apache.spark" %% "spark-connect-client-jvm" % sparkVersion.value % "provided",
@@ -338,27 +238,32 @@ lazy val connectClient = (project in file("spark-connect/client"))
       // Create a (mini) Spark Distribution based on the server classpath.
       val serverClassPath = (connectServer / Compile / fullClasspath).value
       val distributionDir = crossTarget.value / "test-dist"
+      val jarsDir = distributionDir / "jars"
+
       if (!distributionDir.exists()) {
-        val jarsDir = distributionDir / "jars"
         IO.createDirectory(jarsDir)
-        // Create symlinks for all dependencies.
-        serverClassPath.distinct.foreach { entry =>
+        // Create symlinks for all dependencies (filter to only JAR files)
+        serverClassPath.distinct.filter(_.data.isFile).foreach { entry =>
           val jarFile = entry.data.toPath
           val linkedJarFile = jarsDir / entry.data.getName
-          Files.createSymbolicLink(linkedJarFile.toPath, jarFile)
+          if (!java.nio.file.Files.exists(linkedJarFile.toPath)) {
+            Files.createSymbolicLink(linkedJarFile.toPath, jarFile)
+          }
         }
         // Create a symlink for the log4j properties
         val confDir = distributionDir / "conf"
         IO.createDirectory(confDir)
-        val log4jProps = (spark / Test / resourceDirectory).value / "log4j2_spark_master.properties"
+        val log4jProps = (sparkV1 / Test / resourceDirectory).value / "log4j2.properties"
         val linkedLog4jProps = confDir / "log4j2.properties"
-        Files.createSymbolicLink(linkedLog4jProps.toPath, log4jProps.toPath)
+        if (!java.nio.file.Files.exists(linkedLog4jProps.toPath)) {
+          Files.createSymbolicLink(linkedLog4jProps.toPath, log4jProps.toPath)
+        }
       }
       // Return the location of the distribution directory.
       "-Ddelta.spark.home=" + distributionDir
     },
     // Required for testing addFeatureSupport/dropFeatureSupport.
-    Test / envVars += ("DELTA_TESTING", "1"),
+    Test / envVars += ("DELTA_TESTING", "1")
   )
 
 lazy val connectServer = (project in file("spark-connect/server"))
@@ -369,25 +274,19 @@ lazy val connectServer = (project in file("spark-connect/server"))
     name := "delta-connect-server",
     commonSettings,
     releaseSettings,
-    Compile / compile := runTaskOnlyOnSparkMaster(
-      task = Compile / compile,
-      taskName = "compile",
-      projectName = "delta-connect-server",
-      emptyValue = Analysis.empty.asInstanceOf[CompileAnalysis]
-    ).value,
-    Test / test := runTaskOnlyOnSparkMaster(
-      task = Test / test,
-      taskName = "test",
-      projectName = "delta-connect-server",
-      emptyValue = ()
-    ).value,
-    publish := runTaskOnlyOnSparkMaster(
-      task = publish,
-      taskName = "publish",
-      projectName = "delta-connect-server",
-      emptyValue = ()
-    ).value,
-    crossSparkSettings(),
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
+    // Export as JAR instead of classes directory. Required for connectClient test setup so that
+    // classes like SimpleDeltaConnectService are available as a JAR file that can be symlinked
+    // and picked up by Spark Submit's jars/* wildcard. Also prevents classpath conflicts.
+    exportJars := true,
+    assembly / assemblyMergeStrategy := {
+      // Discard module-info.class files from Java 9+ modules and multi-release JARs
+      case "module-info.class" => MergeStrategy.discard
+      case PathList("META-INF", "versions", _, "module-info.class") => MergeStrategy.discard
+      case x =>
+        val oldStrategy = (assembly / assemblyMergeStrategy).value
+        oldStrategy(x)
+    },
     libraryDependencies ++= Seq(
       "com.google.protobuf" % "protobuf-java" % protoVersion % "protobuf",
 
@@ -413,6 +312,8 @@ lazy val connectServer = (project in file("spark-connect/server"))
     ),
     // Required for testing addFeatureSupport/dropFeatureSupport.
     Test / envVars += ("DELTA_TESTING", "1"),
+    // Force Spark to bind to localhost to avoid network issues
+    Test / envVars += ("SPARK_LOCAL_IP", "127.0.0.1")
   )
 
 lazy val deltaSuiteGenerator = (project in file("spark/delta-suite-generator"))
@@ -421,6 +322,7 @@ lazy val deltaSuiteGenerator = (project in file("spark/delta-suite-generator"))
     name := "delta-suite-generator",
     commonSettings,
     scalaStyleSettings,
+    skipReleaseSettings, // Internal module - not published to Maven
     libraryDependencies ++= Seq(
       "org.scala-lang.modules" %% "scala-collection-compat" % "2.11.0",
       "org.scalameta" %% "scalameta" % "4.13.5",
@@ -433,17 +335,29 @@ lazy val deltaSuiteGenerator = (project in file("spark/delta-suite-generator"))
     Test / baseDirectory := (ThisBuild / baseDirectory).value,
   )
 
-lazy val spark = (project in file("spark"))
+// ============================================================
+// Spark Module 1: sparkV1 (prod code only, no tests)
+// ============================================================
+lazy val sparkV1 = (project in file("spark"))
   .dependsOn(storage)
   .enablePlugins(Antlr4Plugin)
   .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
   .settings (
-    name := "delta-spark",
+    name := "delta-spark-v1",
     commonSettings,
     scalaStyleSettings,
-    sparkMimaSettings,
-    releaseSettings,
-    crossSparkSettings(),
+    skipReleaseSettings, // Internal module - not published to Maven
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
+
+    // Export as JAR instead of classes directory. This prevents dependent projects
+    // (e.g., connectServer) from seeing multiple 'classes' directories with the same
+    // name in their classpath, which would cause FileAlreadyExistsException.
+    exportJars := true,
+
+    // Tests are compiled in the final 'spark' module to avoid circular dependencies
+    Test / sources := Seq.empty,
+    Test / resources := Seq.empty,
+
     libraryDependencies ++= Seq(
       // Adding test classifier seems to break transitive resolution of the core dependencies
       "org.apache.spark" %% "spark-hive" % sparkVersion.value % "provided",
@@ -470,6 +384,236 @@ lazy val spark = (project in file("spark"))
     Antlr4 / antlr4GenListener := true,
     Antlr4 / antlr4GenVisitor := true,
 
+    // Introduced in https://github.com/delta-io/delta/commit/d2990624d34b6b86fa5cf230e00a89b095fde254
+    //
+    // Hack to avoid errors related to missing repo-root/target/scala-2.13/classes/
+    // In multi-module sbt projects, some dependencies may attempt to locate this directory
+    // at the repository root, causing build failures if it doesn't exist.
+    createTargetClassesDir := {
+      val dir = baseDirectory.value.getParentFile / "target" / "scala-2.13" / "classes"
+      Files.createDirectories(dir.toPath)
+    },
+    Compile / compile := ((Compile / compile) dependsOn createTargetClassesDir).value,
+    // Generate the package object to provide the version information in runtime.
+    Compile / sourceGenerators += Def.task {
+      val file = (Compile / sourceManaged).value / "io" / "delta" / "package.scala"
+      IO.write(file,
+        s"""package io
+           |
+           |package object delta {
+           |  val VERSION = "${version.value}"
+           |}
+           |""".stripMargin)
+      Seq(file)
+    },
+  )
+
+// ============================================================
+// Spark Module 2: sparkV1Filtered (v1 without DeltaLog for v2 dependency)
+// This filtered version of sparkV1 is needed because sparkV2 (kernel-spark) depends on some
+// V1 classes for utilities and common functionality, but must NOT have access to DeltaLog,
+// Snapshot, OptimisticTransaction, or actions that belongs to core V1 delta libraries.
+// We should use Kernel as the Delta implementation.
+// ============================================================
+lazy val sparkV1Filtered = (project in file("spark-v1-filtered"))
+  .dependsOn(sparkV1)
+  .dependsOn(storage)
+  .settings(
+    name := "delta-spark-v1-filtered",
+    commonSettings,
+    skipReleaseSettings, // Internal module - not published to Maven
+    exportJars := true,  // Export as JAR to avoid classpath conflicts
+
+    // No source code - just repackage sparkV1 without DeltaLog classes
+    Compile / sources := Seq.empty,
+    Test / sources := Seq.empty,
+
+    // Repackage sparkV1 jar but exclude DeltaLog and related classes
+    Compile / packageBin / mappings := {
+      val v1Mappings = (sparkV1 / Compile / packageBin / mappings).value
+
+      // Filter out DeltaLog, Snapshot, OptimisticTransaction, and actions.scala classes
+      v1Mappings.filterNot { case (file, path) =>
+        path.contains("org/apache/spark/sql/delta/DeltaLog") ||
+        path.contains("org/apache/spark/sql/delta/Snapshot") ||
+        path.contains("org/apache/spark/sql/delta/OptimisticTransaction") ||
+        path.contains("org/apache/spark/sql/delta/actions/actions")
+      }
+    },
+  )
+
+// ============================================================
+// Spark Module 3: sparkV2 (kernel-spark based, depends on v1-filtered)
+// ============================================================
+lazy val sparkV2 = (project in file("kernel-spark"))
+  .dependsOn(sparkV1Filtered)
+  .dependsOn(kernelDefaults)
+  .dependsOn(kernelUnityCatalog % "compile->compile;test->test")
+  .dependsOn(goldenTables % "test")
+  .settings(
+    name := "delta-spark-v2",
+    commonSettings,
+    javafmtCheckSettings,
+    skipReleaseSettings, // Internal module - not published to Maven
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
+    exportJars := true,  // Export as JAR to avoid classpath conflicts
+
+    Test / javaOptions ++= Seq("-ea"),
+    // make sure shaded kernel-api jar exists before compiling/testing
+    Compile / compile := (Compile / compile)
+      .dependsOn(kernelApi / Compile / packageBin).value,
+    Test / test := (Test / test)
+      .dependsOn(kernelApi / Compile / packageBin).value,
+    Test / unmanagedJars += (kernelApi / Test / packageBin).value,
+    Compile / unmanagedJars ++= Seq(
+      (kernelApi / Compile / packageBin).value
+    ),
+    libraryDependencies ++= Seq(
+      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-core" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "provided",
+
+      // Test dependencies
+      "org.junit.jupiter" % "junit-jupiter-api" % "5.8.2" % "test",
+      "org.junit.jupiter" % "junit-jupiter-engine" % "5.8.2" % "test",
+      "org.junit.jupiter" % "junit-jupiter-params" % "5.8.2" % "test",
+      "net.aichler" % "jupiter-interface" % "0.11.1" % "test",
+      // Spark test classes for Scala/Java test utilities
+      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-core" % sparkVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test" classifier "tests",
+      // ScalaTest for test utilities (needed by Spark test classes)
+      "org.scalatest" %% "scalatest" % scalaTestVersion % "test"
+    ),
+    Test / testOptions += Tests.Argument(TestFrameworks.JUnit, "-v", "-a"),
+    TestParallelization.settings
+  )
+
+
+// ============================================================
+// Spark Module 4: delta-spark (final published module - unified v1+v2)
+// ============================================================
+lazy val spark = (project in file("spark-unified"))
+  .dependsOn(sparkV1)
+  .dependsOn(sparkV2)
+  .dependsOn(storage)
+  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
+  .settings (
+    name := "delta-spark",
+    commonSettings,
+    scalaStyleSettings,
+    sparkMimaSettings,
+    releaseSettings, // Published to Maven as delta-spark.jar
+
+    // Set Test baseDirectory before sparkDependentSettings() so it uses the correct directory
+    Test / baseDirectory := (sparkV1 / baseDirectory).value,
+
+    // Test sources from spark/ directory (sparkV1's directory) AND spark-unified's own directory
+    // MUST be set BEFORE crossSparkSettings() to avoid overwriting version-specific directories
+    Test / unmanagedSourceDirectories := {
+      val sparkDir = (sparkV1 / baseDirectory).value
+      val unifiedDir = baseDirectory.value
+      Seq(
+        sparkDir / "src" / "test" / "scala",
+        sparkDir / "src" / "test" / "java",
+        unifiedDir / "src" / "test" / "scala",
+        unifiedDir / "src" / "test" / "java"
+      )
+    },
+    Test / unmanagedResourceDirectories := Seq(
+      (sparkV1 / baseDirectory).value / "src" / "test" / "resources",
+      baseDirectory.value / "src" / "test" / "resources"
+    ),
+
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
+
+    // MiMa should use the generated JAR (not classDirectory) because we merge classes at package time
+    mimaCurrentClassfiles := (Compile / packageBin).value,
+
+    // Export as JAR to dependent projects (e.g., connectServer, connectClient).
+    // This prevents classpath conflicts from internal module 'classes' directories.
+    exportJars := true,
+
+    // Internal module artifact names to exclude from published POM
+    internalModuleNames := Set("delta-spark-v1", "delta-spark-v1-shaded", "delta-spark-v2"),
+
+    // Merge classes from internal modules (v1, v2) into final JAR
+    // kernel modules are kept as separate JARs and listed as dependencies in POM
+    Compile / packageBin / mappings ++= {
+      val log = streams.value.log
+
+      // Collect mappings from internal modules
+      val v1Mappings = (sparkV1 / Compile / packageBin / mappings).value
+      val v2Mappings = (sparkV2 / Compile / packageBin / mappings).value
+
+      // Include Python files (from spark/ directory)
+      val pythonMappings = listPythonFiles(baseDirectory.value.getParentFile / "python")
+
+      // Combine all mappings
+      val allMappings = v1Mappings ++ v2Mappings ++ pythonMappings
+
+      // Detect duplicate class files
+      val classFiles = allMappings.filter(_._2.endsWith(".class"))
+      val duplicates = classFiles.groupBy(_._2).filter(_._2.size > 1)
+
+      if (duplicates.nonEmpty) {
+        log.error(s"Found ${duplicates.size} duplicate class(es) in packageBin mappings:")
+        duplicates.foreach { case (className, entries) =>
+          log.error(s"  - $className:")
+          entries.foreach { case (file, path) => log.error(s"      from: $file") }
+        }
+        sys.error("Duplicate classes found. This indicates overlapping code between sparkV1, sparkV2, and storage modules.")
+      }
+
+      allMappings.distinct
+    },
+
+    // Exclude internal modules from published POM
+    pomPostProcess := { node =>
+      val internalModules = internalModuleNames.value
+      import scala.xml._
+      import scala.xml.transform._
+      new RuleTransformer(new RewriteRule {
+        override def transform(n: Node): Seq[Node] = n match {
+          case e: Elem if e.label == "dependency" =>
+            val artifactId = (e \ "artifactId").text
+            // Check if artifactId starts with any internal module name
+            // (e.g., "delta-spark-v1_4.1_2.13" starts with "delta-spark-v1")
+            val isInternal = internalModules.exists(module => artifactId.startsWith(module))
+            if (isInternal) Seq.empty else Seq(n)
+          case _ => Seq(n)
+        }
+      }).transform(node).head
+    },
+
+    pomIncludeRepository := { _ => false },
+
+    // Filter internal modules from project dependencies
+    // This works together with pomPostProcess to ensure internal modules
+    // (sparkV1, sparkV2, sparkV1Filtered) are not listed as dependencies in POM
+    projectDependencies := {
+      val internalModules = internalModuleNames.value
+      projectDependencies.value.filterNot(dep => internalModules.contains(dep.name))
+    },
+
+    libraryDependencies ++= Seq(
+      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-core" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "provided",
+      "com.amazonaws" % "aws-java-sdk" % "1.12.262" % "provided",
+
+      "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
+      "org.scalatestplus" %% "scalacheck-1-15" % "3.2.9.0" % "test",
+      "junit" % "junit" % "4.13.2" % "test",
+      "com.novocode" % "junit-interface" % "0.11" % "test",
+      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-core" % sparkVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "test" classifier "tests",
+      "org.mockito" % "mockito-inline" % "4.11.0" % "test",
+    ),
+
     Test / testOptions += Tests.Argument("-oDF"),
     Test / testOptions += Tests.Argument(TestFrameworks.JUnit, "-v", "-a"),
 
@@ -493,29 +637,11 @@ lazy val spark = (project in file("spark"))
     // Required for testing table features see https://github.com/delta-io/delta/issues/1602
     Test / envVars += ("DELTA_TESTING", "1"),
 
-    // Hack to avoid errors related to missing repo-root/target/scala-2.12/classes/
-    createTargetClassesDir := {
-      val dir = baseDirectory.value.getParentFile / "target" / "scala-2.12" / "classes"
-      Files.createDirectories(dir.toPath)
-    },
-    Compile / compile := ((Compile / compile) dependsOn createTargetClassesDir).value,
-    // Generate the package object to provide the version information in runtime.
-    Compile / sourceGenerators += Def.task {
-      val file = (Compile / sourceManaged).value / "io" / "delta" / "package.scala"
-      IO.write(file,
-        s"""package io
-           |
-           |package object delta {
-           |  val VERSION = "${version.value}"
-           |}
-           |""".stripMargin)
-      Seq(file)
-    },
     TestParallelization.settings,
   )
   .configureUnidoc(
-    generatedJavaDoc = getSparkVersion() == LATEST_RELEASED_SPARK_VERSION,
-    generateScalaDoc = getSparkVersion() == LATEST_RELEASED_SPARK_VERSION,
+    generatedJavaDoc = CrossSparkVersions.getSparkVersionSpec().generateDocs,
+    generateScalaDoc = CrossSparkVersions.getSparkVersionSpec().generateDocs,
     // spark-connect has classes with the same name as spark-core, this causes compilation issues
     // with unidoc since it concatenates the classpaths from all modules
     // ==> thus we exclude such sources
@@ -531,6 +657,7 @@ lazy val contribs = (project in file("contribs"))
     commonSettings,
     scalaStyleSettings,
     releaseSettings,
+    CrossSparkVersions.sparkDependentModuleName(sparkVersion),
     Compile / packageBin / mappings := (Compile / packageBin / mappings).value ++
       listPythonFiles(baseDirectory.value.getParentFile / "python"),
 
@@ -554,13 +681,87 @@ lazy val contribs = (project in file("contribs"))
       "-Xmx1024m"
     ),
 
-    // Hack to avoid errors related to missing repo-root/target/scala-2.12/classes/
+    // Introduced in https://github.com/delta-io/delta/commit/d2990624d34b6b86fa5cf230e00a89b095fde254
+    //
+    // Hack to avoid errors related to missing repo-root/target/scala-2.13/classes/
+    // In multi-module sbt projects, some dependencies may attempt to locate this directory
+    // at the repository root, causing build failures if it doesn't exist.
     createTargetClassesDir := {
-      val dir = baseDirectory.value.getParentFile / "target" / "scala-2.12" / "classes"
+      val dir = baseDirectory.value.getParentFile / "target" / "scala-2.13" / "classes"
       Files.createDirectories(dir.toPath)
     },
-    Compile / compile := ((Compile / compile) dependsOn createTargetClassesDir).value
+    Compile / compile := ((Compile / compile) dependsOn createTargetClassesDir).value,
+    TestParallelization.settings
   ).configureUnidoc()
+
+
+val unityCatalogVersion = "0.3.1"
+val sparkUnityCatalogJacksonVersion = "2.15.4" // We are using Spark 4.0's Jackson version 2.15.x, to override Unity Catalog 0.3.0's version 2.18.x
+
+lazy val sparkUnityCatalog = (project in file("spark/unitycatalog"))
+  .dependsOn(spark % "compile->compile;test->test;provided->provided")
+  .disablePlugins(ScalafmtPlugin)
+  .settings(
+    name := "delta-spark-unitycatalog",
+    commonSettings,
+    skipReleaseSettings,
+    javafmtCheckSettings(),
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
+
+    // This is a test-only module - no production sources
+    Compile / sources := Seq.empty,
+
+    // Ensure Java sources are picked up
+    Test / unmanagedSourceDirectories += baseDirectory.value / "src" / "test" / "java",
+
+    Test / javaOptions ++= Seq("-ea"),
+
+    // Don't execute in parallel since we can't have multiple Sparks in the same JVM
+    Test / parallelExecution := false,
+
+    // Force ALL Jackson dependencies to match Spark's Jackson version
+    // This overrides Jackson from Unity Catalog's transitive dependencies (e.g., Armeria)
+    dependencyOverrides ++= Seq(
+      "com.fasterxml.jackson.core" % "jackson-core" % sparkUnityCatalogJacksonVersion,
+      "com.fasterxml.jackson.core" % "jackson-annotations" % sparkUnityCatalogJacksonVersion,
+      "com.fasterxml.jackson.core" % "jackson-databind" % sparkUnityCatalogJacksonVersion,
+      "com.fasterxml.jackson.module" %% "jackson-module-scala" % sparkUnityCatalogJacksonVersion,
+      "com.fasterxml.jackson.dataformat" % "jackson-dataformat-yaml" % sparkUnityCatalogJacksonVersion,
+      "com.fasterxml.jackson.datatype" % "jackson-datatype-jsr310" % sparkUnityCatalogJacksonVersion,
+      "com.fasterxml.jackson.datatype" % "jackson-datatype-jdk8" % sparkUnityCatalogJacksonVersion
+    ),
+
+    libraryDependencies ++= Seq(
+      "org.assertj" % "assertj-core" % "3.26.3" % "test",
+      // JUnit 5 test dependencies
+      "org.junit.jupiter" % "junit-jupiter-api" % "5.8.2" % "test",
+      "org.junit.jupiter" % "junit-jupiter-engine" % "5.8.2" % "test",
+      "org.junit.jupiter" % "junit-jupiter-params" % "5.8.2" % "test",
+      "net.aichler" % "jupiter-interface" % "0.11.1" % "test",
+
+      // Unity Catalog dependencies - exclude Jackson to use Spark's Jackson 2.15.x
+      "io.unitycatalog" %% "unitycatalog-spark" % unityCatalogVersion % "test" excludeAll(
+        ExclusionRule(organization = "com.fasterxml.jackson.core"),
+        ExclusionRule(organization = "com.fasterxml.jackson.module"),
+        ExclusionRule(organization = "com.fasterxml.jackson.datatype"),
+        ExclusionRule(organization = "com.fasterxml.jackson.dataformat")
+      ),
+      "io.unitycatalog" % "unitycatalog-server" % unityCatalogVersion % "test" excludeAll(
+        ExclusionRule(organization = "com.fasterxml.jackson.core"),
+        ExclusionRule(organization = "com.fasterxml.jackson.module"),
+        ExclusionRule(organization = "com.fasterxml.jackson.datatype"),
+        ExclusionRule(organization = "com.fasterxml.jackson.dataformat")
+      ),
+
+      // Spark test dependencies
+      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test",
+      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test",
+      "org.apache.spark" %% "spark-core" % sparkVersion.value % "test",
+    ),
+
+    Test / testOptions += Tests.Argument("-oDF"),
+    Test / testOptions += Tests.Argument(TestFrameworks.JUnit, "-v", "-a")
+  )
 
 lazy val sharing = (project in file("sharing"))
   .dependsOn(spark % "compile->compile;test->test;provided->provided")
@@ -570,12 +771,12 @@ lazy val sharing = (project in file("sharing"))
     commonSettings,
     scalaStyleSettings,
     releaseSettings,
-    crossSparkSettings(),
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
     Test / javaOptions ++= Seq("-ea"),
     libraryDependencies ++= Seq(
       "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
 
-      "io.delta" %% "delta-sharing-client" % "1.2.4",
+      "io.delta" %% "delta-sharing-client" % "1.3.8",
 
       // Test deps
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
@@ -586,7 +787,8 @@ lazy val sharing = (project in file("sharing"))
       "org.apache.spark" %% "spark-core" % sparkVersion.value % "test" classifier "tests",
       "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test" classifier "tests",
       "org.apache.spark" %% "spark-hive" % sparkVersion.value % "test" classifier "tests",
-    )
+    ),
+    TestParallelization.settings
   ).configureUnidoc()
 
 lazy val kernelApi = (project in file("kernel/kernel-api"))
@@ -598,7 +800,17 @@ lazy val kernelApi = (project in file("kernel/kernel-api"))
     javaOnlyReleaseSettings,
     javafmtCheckSettings,
     scalafmtCheckSettings,
+
+    // Use unique classDirectory name to avoid conflicts in connectClient test setup
+    // This allows connectClient to create symlinks without FileAlreadyExistsException
+    Compile / classDirectory := target.value / "scala-2.13" / "kernel-api-classes",
+
     Test / javaOptions ++= Seq("-ea"),
+
+    // Also publish a test-jar (classifier = "tests") so consumers (e.g. kernelDefault)
+    // can depend on test utilities via a published artifact instead of depending on raw class directories.
+    Test / publishArtifact := true,
+    Test / packageBin / artifactClassifier := Some("tests"),
     libraryDependencies ++= Seq(
       "org.roaringbitmap" % "RoaringBitmap" % "0.9.25",
       "org.slf4j" % "slf4j-api" % "1.7.36",
@@ -608,10 +820,14 @@ lazy val kernelApi = (project in file("kernel/kernel-api"))
       "com.fasterxml.jackson.core" % "jackson-annotations" % "2.13.5",
       "com.fasterxml.jackson.datatype" % "jackson-datatype-jdk8" % "2.13.5",
 
+      // JSR-305 annotations for @Nullable
+      "com.google.code.findbugs" % "jsr305" % "3.0.2",
+
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
       "junit" % "junit" % "4.13.2" % "test",
       "com.novocode" % "junit-interface" % "0.11" % "test",
-      "org.slf4j" % "slf4j-log4j12" % "1.7.36" % "test",
+      "org.apache.logging.log4j" % "log4j-slf4j-impl" % "2.20.0" % "test",
+      "org.apache.logging.log4j" % "log4j-core" % "2.20.0" % "test",
       "org.assertj" % "assertj-core" % "3.26.3" % "test",
       // JMH dependencies allow writing micro-benchmarks for testing performance of components.
       // JMH has framework to define benchmarks and takes care of many common functionalities
@@ -679,11 +895,8 @@ lazy val kernelApi = (project in file("kernel/kernel-api"))
 
 lazy val kernelDefaults = (project in file("kernel/kernel-defaults"))
   .enablePlugins(ScalafmtPlugin)
-  .dependsOn(kernelApi)
-  .dependsOn(kernelApi % "test->test")
   .dependsOn(storage)
   .dependsOn(storage % "test->test") // Required for InMemoryCommitCoordinator for tests
-  .dependsOn(spark % "test->test")
   .dependsOn(goldenTables % "test")
   .settings(
     name := "delta-kernel-defaults",
@@ -692,10 +905,26 @@ lazy val kernelDefaults = (project in file("kernel/kernel-defaults"))
     javaOnlyReleaseSettings,
     javafmtCheckSettings,
     scalafmtCheckSettings,
+
+    // Use unique classDirectory name to avoid conflicts in connectClient test setup
+    // This allows connectClient to create symlinks without FileAlreadyExistsException
+    Compile / classDirectory := target.value / "scala-2.13" / "kernel-defaults-classes",
+
     Test / javaOptions ++= Seq("-ea"),
     // This allows generating tables with unsupported test table features in delta-spark
     Test / envVars += ("DELTA_TESTING", "1"),
+
+    // Put the shaded kernel-api JAR on the classpath (compile & test)
+    Compile / unmanagedJars += (kernelApi / Compile / packageBin).value,
+    Test / unmanagedJars += (kernelApi / Compile / packageBin).value,
+
+    // Make sure the shaded JAR is produced before we compile/run tests
+    Compile / compile := (Compile / compile).dependsOn(kernelApi / Compile / packageBin).value,
+    Test / test       := (Test    / test).dependsOn(kernelApi / Compile / packageBin).value,
+    Test / unmanagedJars += (kernelApi / Test / packageBin).value,
+
     libraryDependencies ++= Seq(
+      "org.assertj" % "assertj-core" % "3.26.3" % Test,
       "org.apache.hadoop" % "hadoop-client-runtime" % hadoopVersion,
       "com.fasterxml.jackson.core" % "jackson-databind" % "2.13.5",
       "com.fasterxml.jackson.datatype" % "jackson-datatype-jdk8" % "2.13.5",
@@ -705,12 +934,14 @@ lazy val kernelDefaults = (project in file("kernel/kernel-defaults"))
       "junit" % "junit" % "4.13.2" % "test",
       "commons-io" % "commons-io" % "2.8.0" % "test",
       "com.novocode" % "junit-interface" % "0.11" % "test",
-      "org.slf4j" % "slf4j-log4j12" % "1.7.36" % "test",
+      "org.apache.logging.log4j" % "log4j-slf4j-impl" % "2.20.0" % "test",
+      "org.apache.logging.log4j" % "log4j-core" % "2.20.0" % "test",
       // JMH dependencies allow writing micro-benchmarks for testing performance of components.
       // JMH has framework to define benchmarks and takes care of many common functionalities
       // such as warm runs, cold runs, defining benchmark parameter variables etc.
       "org.openjdk.jmh" % "jmh-core" % "1.37" % "test",
       "org.openjdk.jmh" % "jmh-generator-annprocess" % "1.37" % "test",
+      "io.delta" %% "delta-spark" % "4.0.0" % "test",
 
       "org.apache.spark" %% "spark-hive" % defaultSparkVersion % "test" classifier "tests",
       "org.apache.spark" %% "spark-sql" % defaultSparkVersion % "test" classifier "tests",
@@ -723,48 +954,53 @@ lazy val kernelDefaults = (project in file("kernel/kernel-defaults"))
     unidocSourceFilePatterns += SourceFilePattern("io/delta/kernel/"),
   ).configureUnidoc(docTitle = "Delta Kernel Defaults")
 
-
-lazy val kernelSpark = (project in file("kernel-spark"))
-  .dependsOn(kernelApi)
-  .dependsOn(kernelDefaults)
-  .dependsOn(spark % "test->test")
-  .dependsOn(goldenTables % "test")
-  .settings(
-    name := "kernel-spark",
-    commonSettings,
-    javafmtCheckSettings,
-    skipReleaseSettings,
-    Test / javaOptions ++= Seq("-ea"),
-    libraryDependencies ++= Seq(
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "provided",
-
-      "org.junit.jupiter" % "junit-jupiter-api" % "5.8.2" % "test",
-      "org.junit.jupiter" % "junit-jupiter-engine" % "5.8.2" % "test",
-      "org.junit.jupiter" % "junit-jupiter-params" % "5.8.2" % "test",
-      "net.aichler" % "jupiter-interface" % "0.11.1" % "test"
-    ),
-    Test / testOptions += Tests.Argument(TestFrameworks.JUnit, "-v", "-a")
-  )
-  // TODO to enable unit doc for kernelSpark.
-
-lazy val unity = (project in file("unity"))
+lazy val kernelBenchmarks = (project in file("kernel/kernel-benchmarks"))
   .enablePlugins(ScalafmtPlugin)
-  .dependsOn(kernelApi % "compile->compile;test->test")
+  .dependsOn(kernelDefaults % "test->test")
+  .dependsOn(kernelApi % "test->test")
+  .dependsOn(storage % "test->test")
+  .dependsOn(kernelUnityCatalog % "test->test")
+  .settings(
+    name := "delta-kernel-benchmarks",
+    commonSettings,
+    skipReleaseSettings,
+    exportJars := false,
+    javafmtCheckSettings,
+    scalafmtCheckSettings,
+    
+    libraryDependencies ++= Seq(
+      "org.openjdk.jmh" % "jmh-core" % "1.37" % "test",
+      "org.openjdk.jmh" % "jmh-generator-annprocess" % "1.37" % "test",
+    ),
+  )
+
+lazy val kernelUnityCatalog = (project in file("kernel/unitycatalog"))
+  .enablePlugins(ScalafmtPlugin)
   .dependsOn(kernelDefaults % "test->test")
   .dependsOn(storage)
   .settings (
-    name := "delta-unity",
+    name := "delta-kernel-unitycatalog",
     commonSettings,
     javaOnlyReleaseSettings,
     javafmtCheckSettings,
     javaCheckstyleSettings("dev/kernel-checkstyle.xml"),
     scalaStyleSettings,
     scalafmtCheckSettings,
+
+    // Put the shaded kernel-api JAR on the classpath (compile & test)
+    Compile / unmanagedJars += (kernelApi / Compile / packageBin).value,
+    Test / unmanagedJars += (kernelApi / Compile / packageBin).value,
+
+    // Make sure the shaded JAR is produced before we compile/run tests
+    Compile / compile := (Compile / compile).dependsOn(kernelApi / Compile / packageBin).value,
+    Test / test       := (Test    / test).dependsOn(kernelApi / Compile / packageBin).value,
+    Test / unmanagedJars += (kernelApi / Test / packageBin).value,
+
     libraryDependencies ++= Seq(
       "org.apache.hadoop" % "hadoop-common" % hadoopVersion % "provided",
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
+      "org.apache.logging.log4j" % "log4j-slf4j-impl" % "2.20.0" % "test",
+      "org.apache.logging.log4j" % "log4j-core" % "2.20.0" % "test",
     ),
     unidocSourceFilePatterns += SourceFilePattern("src/main/java/io/delta/unity/"),
   ).configureUnidoc()
@@ -787,6 +1023,13 @@ lazy val storage = (project in file("storage"))
       // Note that the org.apache.hadoop.fs.s3a.Listing::createFileStatusListingIterator 3.3.1 API
       // is not compatible with 3.3.2.
       "org.apache.hadoop" % "hadoop-aws" % hadoopVersion % "provided",
+      "io.unitycatalog" % "unitycatalog-client" % unityCatalogVersion excludeAll(
+        ExclusionRule(organization = "org.openapitools"),
+        ExclusionRule(organization = "com.fasterxml.jackson.core"),
+        ExclusionRule(organization = "com.fasterxml.jackson.module"),
+        ExclusionRule(organization = "com.fasterxml.jackson.datatype"),
+        ExclusionRule(organization = "com.fasterxml.jackson.dataformat")
+      ),
 
       // Test Deps
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
@@ -794,6 +1037,7 @@ lazy val storage = (project in file("storage"))
 
     // Unidoc settings
     unidocSourceFilePatterns += SourceFilePattern("/LogStore.java", "/CloseableIterator.java"),
+    TestParallelization.settings
   ).configureUnidoc()
 
 lazy val storageS3DynamoDB = (project in file("storage-s3-dynamodb"))
@@ -814,7 +1058,8 @@ lazy val storageS3DynamoDB = (project in file("storage-s3-dynamodb"))
 
       // Test Deps
       "org.apache.hadoop" % "hadoop-aws" % hadoopVersion % "test", // RemoteFileChangedException
-    )
+    ),
+    TestParallelization.settings
   ).configureUnidoc()
 
 val icebergSparkRuntimeArtifactName = {
@@ -861,24 +1106,60 @@ lazy val iceberg = (project in file("iceberg"))
     commonSettings,
     scalaStyleSettings,
     releaseSettings,
+    CrossSparkVersions.sparkDependentModuleName(sparkVersion),
+    // TODO: upgrade to Spark 4.1?
+    Compile / compile := runTaskOnlyOnSparkDefault(
+      task = Compile / compile,
+      taskName = "compile",
+      projectName = "delta-iceberg",
+      emptyValue = Analysis.empty.asInstanceOf[CompileAnalysis]
+    ).value,
+    Test / test := runTaskOnlyOnSparkDefault(
+      task = Test / test,
+      taskName = "test",
+      projectName = "delta-iceberg",
+      emptyValue = ()
+    ).value,
+    publish := runTaskOnlyOnSparkDefault(
+      task = publish,
+      taskName = "publish",
+      projectName = "delta-iceberg",
+      emptyValue = ()
+    ).value,
+    publishM2 := runTaskOnlyOnSparkDefault(
+      task = publishM2,
+      taskName = "publishM2",
+      projectName = "delta-iceberg",
+      emptyValue = ()
+    ).value,
     libraryDependencies ++= Seq(
       // Fix Iceberg's legacy java.lang.NoClassDefFoundError: scala/jdk/CollectionConverters$ error
       // due to legacy scala.
       "org.scala-lang.modules" %% "scala-collection-compat" % "2.1.1",
-      "org.apache.iceberg" %% icebergSparkRuntimeArtifactName % "1.4.0" % "provided",
-      "com.github.ben-manes.caffeine" % "caffeine" % "2.9.3"
+      "org.apache.iceberg" %% icebergSparkRuntimeArtifactName % "1.10.0" % "provided",
+      "com.github.ben-manes.caffeine" % "caffeine" % "2.9.3",
+      "com.jolbox" % "bonecp" % "0.8.0.RELEASE" % "test",
+      "org.eclipse.jetty" % "jetty-server" % "11.0.26" % "test",
+      "org.eclipse.jetty" % "jetty-servlet" % "11.0.26" % "test",
+      "org.xerial" % "sqlite-jdbc" % "3.45.0.0" % "test",
+      "org.apache.httpcomponents.core5" % "httpcore5" % "5.2.4" % "test",
+      "org.apache.httpcomponents.client5" % "httpclient5" % "5.3.1" % "test"
     ),
     Compile / unmanagedJars += (icebergShaded / assembly).value,
     // Generate the assembly JAR as the package JAR
     Compile / packageBin := assembly.value,
-    assembly / assemblyJarName := s"${name.value}_${scalaBinaryVersion.value}-${version.value}.jar",
+    Compile / scalacOptions += "-nowarn",
+    Test / unmanagedJars += (icebergTestsShaded / assembly).value,
+    Test / scalacOptions += "-nowarn",
+    assembly / assemblyJarName := {
+      s"${moduleName.value}_${scalaBinaryVersion.value}-${version.value}.jar"
+    },
     assembly / logLevel := Level.Info,
     assembly / test := {},
     assembly / assemblyExcludedJars := {
       // Note: the input here is only `libraryDependencies` jars, not `.dependsOn(_)` jars.
       val allowedJars = Seq(
         s"iceberg-shaded_${scalaBinaryVersion.value}-${version.value}.jar",
-        s"scala-library-${scala212}.jar",
         s"scala-library-${scala213}.jar",
         s"scala-collection-compat_${scalaBinaryVersion.value}-2.1.1.jar",
         "caffeine-2.9.3.jar",
@@ -921,8 +1202,7 @@ lazy val iceberg = (project in file("iceberg"))
   )
 // scalastyle:on println
 
-lazy val generateIcebergJarsTask = TaskKey[Unit]("generateIcebergJars", "Generate Iceberg JARs")
-
+val icebergShadedVersion = "1.10.0"
 lazy val icebergShaded = (project in file("icebergShaded"))
   .dependsOn(spark % "provided")
   .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
@@ -930,29 +1210,80 @@ lazy val icebergShaded = (project in file("icebergShaded"))
     name := "iceberg-shaded",
     commonSettings,
     skipReleaseSettings,
-
-    // Compile, patch and generated Iceberg JARs
-    generateIcebergJarsTask := {
-      import sys.process._
-      val scriptPath = baseDirectory.value / "generate_iceberg_jars.py"
-      // Download iceberg code in `iceberg_src` dir and generate the JARs in `lib` dir
-      Seq("python3", scriptPath.getPath)!
-    },
-    Compile / unmanagedJars := (Compile / unmanagedJars).dependsOn(generateIcebergJarsTask).value,
-    cleanFiles += baseDirectory.value / "iceberg_src",
-    cleanFiles += baseDirectory.value / "lib",
-
+    // must exclude all dependencies from Iceberg that delta-spark includes
+    libraryDependencies ++= Seq(
+      // Fix Iceberg's legacy java.lang.NoClassDefFoundError: scala/jdk/CollectionConverters$ error
+      // due to legacy scala.
+      "org.scala-lang.modules" %% "scala-collection-compat" % "2.1.1" % "provided",
+      "org.apache.iceberg" % "iceberg-core" % icebergShadedVersion excludeAll (
+        icebergExclusionRules: _*
+      ),
+      "org.apache.iceberg" % "iceberg-hive-metastore" % icebergShadedVersion excludeAll (
+        icebergExclusionRules: _*
+      ),
+      // the hadoop client and hive metastore versions come from this file in the
+      // iceberg repo of icebergShadedVersion: iceberg/gradle/libs.versions.toml
+      "org.apache.hadoop" % "hadoop-client" % "2.7.3" % "provided" excludeAll (
+        hadoopClientExclusionRules: _*
+      ),
+      "org.apache.hive" % "hive-metastore" % "2.3.8" % "provided" excludeAll (
+        hiveMetastoreExclusionRules: _*
+      )
+    ),
     // Generated shaded Iceberg JARs
     Compile / packageBin := assembly.value,
     assembly / assemblyJarName := s"${name.value}_${scalaBinaryVersion.value}-${version.value}.jar",
     assembly / logLevel := Level.Info,
     assembly / test := {},
     assembly / assemblyShadeRules := Seq(
-      ShadeRule.rename("org.apache.iceberg.**" -> "shadedForDelta.@0").inAll,
+      ShadeRule.rename("org.apache.iceberg.**" -> "shadedForDelta.@0").inAll
     ),
+    assembly / assemblyExcludedJars := {
+      val cp = (assembly / fullClasspath).value
+      cp.filter { jar =>
+        val doExclude = jar.data.getName.contains("jackson-annotations") ||
+          jar.data.getName.contains("RoaringBitmap")
+        doExclude
+      }
+    },
+    // all following clases have Delta customized implementation under icebergShaded/src and thus
+    // require them to be 'first' to replace the class from iceberg jar
+    assembly / assemblyMergeStrategy := updateMergeStrategy((assembly / assemblyMergeStrategy).value),
     assemblyPackageScala / assembleArtifact := false,
-    // Make the 'compile' invoke the 'assembly' task to generate the uber jar.
   )
+
+lazy val icebergTestsShaded = (project in file("icebergTestsShaded"))
+  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
+  .settings (
+    name := "iceberg-tests-shaded",
+    commonSettings,
+    skipReleaseSettings,
+    // must exclude all dependencies from Iceberg that delta-spark includes
+    libraryDependencies ++= Seq(
+      "org.apache.iceberg" % "iceberg-core" % icebergShadedVersion classifier "tests" excludeAll (
+        icebergExclusionRules: _*
+      ),
+    ),
+    // Generated shaded Iceberg JARs
+    Compile / packageBin := assembly.value,
+    assembly / assemblyJarName := s"${name.value}_${scalaBinaryVersion.value}-${version.value}.jar",
+    assembly / logLevel := Level.Info,
+    assembly / test := {},
+    assembly / assemblyShadeRules := Seq(
+      ShadeRule.rename("org.apache.iceberg.**" -> "shadedForDelta.@0").inAll
+    ),
+    assembly / assemblyExcludedJars := {
+      val cp = (fullClasspath in assembly).value
+      cp.filter { jar =>
+        val doExclude = jar.data.getName.contains("jackson-annotations") ||
+          jar.data.getName.contains("RoaringBitmap")
+        doExclude
+      }
+    },
+    assembly / assemblyMergeStrategy := updateMergeStrategy((assembly / assemblyMergeStrategy).value),
+    assemblyPackageScala / assembleArtifact := false,
+  )
+
 
 lazy val hudi = (project in file("hudi"))
   .dependsOn(spark % "compile->compile;test->test;provided->provided")
@@ -962,12 +1293,37 @@ lazy val hudi = (project in file("hudi"))
     commonSettings,
     scalaStyleSettings,
     releaseSettings,
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
+    Compile / compile := runTaskOnlyOnSparkDefault(
+      task = Compile / compile,
+      taskName = "compile",
+      projectName = "delta-hudi",
+      emptyValue = Analysis.empty.asInstanceOf[CompileAnalysis]
+    ).value,
+    Test / test := runTaskOnlyOnSparkDefault(
+      task = Test / test,
+      taskName = "test",
+      projectName = "delta-hudi",
+      emptyValue = ()
+    ).value,
+    publish := runTaskOnlyOnSparkDefault(
+      task = publish,
+      taskName = "publish",
+      projectName = "delta-hudi",
+      emptyValue = ()
+    ).value,
+    publishM2 := runTaskOnlyOnSparkDefault(
+      task = publishM2,
+      taskName = "publishM2",
+      projectName = "delta-hudi",
+      emptyValue = ()
+    ).value,
     libraryDependencies ++= Seq(
       "org.apache.hudi" % "hudi-java-client" % "0.15.0" % "compile" excludeAll(
         ExclusionRule(organization = "org.apache.hadoop"),
         ExclusionRule(organization = "org.apache.zookeeper"),
       ),
-      "org.apache.spark" %% "spark-avro" % defaultSparkVersion % "test" excludeAll ExclusionRule(organization = "org.apache.hadoop"),
+      "org.apache.spark" %% "spark-avro" % sparkVersion.value % "test" excludeAll ExclusionRule(organization = "org.apache.hadoop"),
       "org.apache.parquet" % "parquet-avro" % "1.12.3" % "compile"
     ),
     assembly / assemblyJarName := s"${name.value}-assembly_${scalaBinaryVersion.value}-${version.value}.jar",
@@ -1003,471 +1359,11 @@ lazy val hudi = (project in file("hudi"))
         MergeStrategy.first
     },
     // Make the 'compile' invoke the 'assembly' task to generate the uber jar.
-    Compile / packageBin := assembly.value
+    Compile / packageBin := assembly.value,
+    TestParallelization.settings
   )
-
-lazy val hive = (project in file("connectors/hive"))
-  .dependsOn(standaloneCosmetic)
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings (
-    name := "delta-hive",
-    commonSettings,
-    releaseSettings,
-
-    // Minimal dependencies to compile the codes. This project doesn't run any tests so we don't
-    // need any runtime dependencies.
-    libraryDependencies ++= Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersionForHive3 % "provided",
-      "org.apache.hive" % "hive-exec" % hiveVersion % "provided" classifier "core",
-      "org.apache.hive" % "hive-metastore" % hiveVersion % "provided"
-    ),
-  )
-
-lazy val hiveAssembly = (project in file("connectors/hive-assembly"))
-  .dependsOn(hive)
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings(
-    name := "delta-hive-assembly",
-    Compile / unmanagedJars += (hive / Compile / packageBin / packageBin).value,
-    commonSettings,
-    skipReleaseSettings,
-
-    assembly / logLevel := Level.Info,
-    assembly / assemblyJarName := s"${name.value}_${scalaBinaryVersion.value}-${version.value}.jar",
-    assembly / test := {},
-    assembly / assemblyMergeStrategy := {
-      // Discard `module-info.class` to fix the `different file contents found` error.
-      // TODO Upgrade SBT to 1.5 which will do this automatically
-      case "module-info.class" => MergeStrategy.discard
-      // Discard unused `parquet.thrift` so that we don't conflict the file used by the user
-      case "parquet.thrift" => MergeStrategy.discard
-      // Discard the jackson service configs that we don't need. These files are not shaded so
-      // adding them may conflict with other jackson version used by the user.
-      case PathList("META-INF", "services", xs @ _*) => MergeStrategy.discard
-      case x => MergeStrategy.first
-    },
-    // Make the 'compile' invoke the 'assembly' task to generate the uber jar.
-    Compile / packageBin := assembly.value
-  )
-
-lazy val hiveTest = (project in file("connectors/hive-test"))
-  .dependsOn(goldenTables % "test")
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings (
-    name := "hive-test",
-    // Make the project use the assembly jar to ensure we are testing the assembly jar that users
-    // will use in real environment.
-    Compile / unmanagedJars += (hiveAssembly / Compile / packageBin / packageBin).value,
-    commonSettings,
-    skipReleaseSettings,
-    libraryDependencies ++= Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersionForHive3 % "provided",
-      "org.apache.hive" % "hive-exec" % hiveVersion % "provided" classifier "core" excludeAll(
-        ExclusionRule("org.pentaho", "pentaho-aggdesigner-algorithm"),
-        ExclusionRule(organization = "org.eclipse.jetty"),
-        ExclusionRule(organization = "com.google.protobuf")
-      ),
-      "org.apache.hive" % "hive-metastore" % hiveVersion % "provided"  excludeAll(
-        ExclusionRule(organization = "org.eclipse.jetty"),
-        ExclusionRule("org.apache.hive", "hive-exec")
-      ),
-      "org.apache.hive" % "hive-cli" % hiveVersion % "test" excludeAll(
-        ExclusionRule("ch.qos.logback", "logback-classic"),
-        ExclusionRule("org.pentaho", "pentaho-aggdesigner-algorithm"),
-        ExclusionRule("org.apache.hive", "hive-exec"),
-        ExclusionRule("com.google.guava", "guava"),
-        ExclusionRule(organization = "org.eclipse.jetty"),
-        ExclusionRule(organization = "com.google.protobuf")
-      ),
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test"
-    )
-  )
-
-lazy val hiveMR = (project in file("connectors/hive-mr"))
-  .dependsOn(hiveTest % "test->test")
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings (
-    name := "hive-mr",
-    commonSettings,
-    skipReleaseSettings,
-    libraryDependencies ++= Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersionForHive3 % "provided",
-      "org.apache.hive" % "hive-exec" % hiveVersion % "provided" excludeAll(
-        ExclusionRule(organization = "org.eclipse.jetty"),
-        ExclusionRule("org.pentaho", "pentaho-aggdesigner-algorithm")
-      ),
-      "org.apache.hadoop" % "hadoop-common" % hadoopVersionForHive3 % "test" classifier "tests",
-      "org.apache.hadoop" % "hadoop-mapreduce-client-hs" % hadoopVersionForHive3 % "test",
-      "org.apache.hadoop" % "hadoop-mapreduce-client-jobclient" % hadoopVersionForHive3 % "test" classifier "tests",
-      "org.apache.hadoop" % "hadoop-yarn-server-tests" % hadoopVersionForHive3 % "test" classifier "tests",
-      "org.apache.hive" % "hive-cli" % hiveVersion % "test" excludeAll(
-        ExclusionRule("ch.qos.logback", "logback-classic"),
-        ExclusionRule("com.google.guava", "guava"),
-        ExclusionRule(organization = "org.eclipse.jetty"),
-        ExclusionRule("org.pentaho", "pentaho-aggdesigner-algorithm")
-      ),
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test"
-    )
-  )
-
-lazy val hiveTez = (project in file("connectors/hive-tez"))
-  .dependsOn(hiveTest % "test->test")
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings (
-    name := "hive-tez",
-    commonSettings,
-    skipReleaseSettings,
-    libraryDependencies ++= Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersionForHive3 % "provided" excludeAll (
-        ExclusionRule(organization = "com.google.protobuf")
-        ),
-      "com.google.protobuf" % "protobuf-java" % "2.5.0",
-      "org.apache.hive" % "hive-exec" % hiveVersion % "provided" classifier "core" excludeAll(
-        ExclusionRule("org.pentaho", "pentaho-aggdesigner-algorithm"),
-        ExclusionRule(organization = "org.eclipse.jetty"),
-        ExclusionRule(organization = "com.google.protobuf")
-      ),
-      "org.jodd" % "jodd-core" % "3.5.2",
-      "org.apache.hive" % "hive-metastore" % hiveVersion % "provided" excludeAll(
-        ExclusionRule(organization = "org.eclipse.jetty"),
-        ExclusionRule("org.apache.hive", "hive-exec")
-      ),
-      "org.apache.hadoop" % "hadoop-common" % hadoopVersionForHive3 % "test" classifier "tests",
-      "org.apache.hadoop" % "hadoop-mapreduce-client-hs" % hadoopVersionForHive3 % "test",
-      "org.apache.hadoop" % "hadoop-mapreduce-client-jobclient" % hadoopVersionForHive3 % "test" classifier "tests",
-      "org.apache.hadoop" % "hadoop-yarn-server-tests" % hadoopVersionForHive3 % "test" classifier "tests",
-      "org.apache.hive" % "hive-cli" % hiveVersion % "test" excludeAll(
-        ExclusionRule("ch.qos.logback", "logback-classic"),
-        ExclusionRule("org.pentaho", "pentaho-aggdesigner-algorithm"),
-        ExclusionRule("org.apache.hive", "hive-exec"),
-        ExclusionRule(organization = "org.eclipse.jetty"),
-        ExclusionRule(organization = "com.google.protobuf")
-      ),
-      "org.apache.hadoop" % "hadoop-yarn-common" % hadoopVersionForHive3 % "test",
-      "org.apache.hadoop" % "hadoop-yarn-api" % hadoopVersionForHive3 % "test",
-      "org.apache.tez" % "tez-mapreduce" % tezVersion % "test",
-      "org.apache.tez" % "tez-dag" % tezVersion % "test",
-      "org.apache.tez" % "tez-tests" % tezVersion % "test" classifier "tests",
-      "com.esotericsoftware" % "kryo-shaded" % "4.0.2" % "test",
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test"
-    )
-  )
-
-
-lazy val hive2MR = (project in file("connectors/hive2-mr"))
-  .dependsOn(goldenTables % "test")
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings (
-    name := "hive2-mr",
-    commonSettings,
-    skipReleaseSettings,
-    Compile / unmanagedJars ++= Seq(
-      (hiveAssembly / Compile / packageBin / packageBin).value, // delta-hive assembly
-      (hiveTest / Test / packageBin / packageBin).value
-    ),
-    libraryDependencies ++= Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersionForHive2 % "provided",
-      "org.apache.hive" % "hive-exec" % hive2Version % "provided" excludeAll(
-        ExclusionRule(organization = "org.eclipse.jetty"),
-        ExclusionRule("org.pentaho", "pentaho-aggdesigner-algorithm")
-      ),
-      "org.apache.hadoop" % "hadoop-common" % hadoopVersionForHive2 % "test" classifier "tests",
-      "org.apache.hadoop" % "hadoop-mapreduce-client-hs" % hadoopVersionForHive2 % "test",
-      "org.apache.hadoop" % "hadoop-mapreduce-client-jobclient" % hadoopVersionForHive2 % "test" classifier "tests",
-      "org.apache.hadoop" % "hadoop-yarn-server-tests" % hadoopVersionForHive2 % "test" classifier "tests",
-      "org.apache.hive" % "hive-cli" % hive2Version % "test" excludeAll(
-        ExclusionRule("ch.qos.logback", "logback-classic"),
-        ExclusionRule("com.google.guava", "guava"),
-        ExclusionRule(organization = "org.eclipse.jetty"),
-        ExclusionRule("org.pentaho", "pentaho-aggdesigner-algorithm")
-      ),
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test"
-    )
-  )
-
-lazy val hive2Tez = (project in file("connectors/hive2-tez"))
-  .dependsOn(goldenTables % "test")
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings (
-    name := "hive2-tez",
-    commonSettings,
-    skipReleaseSettings,
-    Compile / unmanagedJars ++= Seq(
-      (hiveAssembly / Compile / packageBin / packageBin).value,
-      (hiveTest / Test / packageBin / packageBin).value
-    ),
-    libraryDependencies ++= Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersionForHive2 % "provided" excludeAll (
-        ExclusionRule(organization = "com.google.protobuf")
-        ),
-      "com.google.protobuf" % "protobuf-java" % "2.5.0",
-      "org.apache.hive" % "hive-exec" % hive2Version % "provided" classifier "core" excludeAll(
-        ExclusionRule("org.pentaho", "pentaho-aggdesigner-algorithm"),
-        ExclusionRule(organization = "org.eclipse.jetty"),
-        ExclusionRule(organization = "com.google.protobuf")
-      ),
-      "org.jodd" % "jodd-core" % "3.5.2",
-      "org.apache.hive" % "hive-metastore" % hive2Version % "provided" excludeAll(
-        ExclusionRule(organization = "org.eclipse.jetty"),
-        ExclusionRule("org.apache.hive", "hive-exec")
-      ),
-      "org.apache.hadoop" % "hadoop-common" % hadoopVersionForHive2 % "test" classifier "tests",
-      "org.apache.hadoop" % "hadoop-mapreduce-client-hs" % hadoopVersionForHive2 % "test",
-      "org.apache.hadoop" % "hadoop-mapreduce-client-jobclient" % hadoopVersionForHive2 % "test" classifier "tests",
-      "org.apache.hadoop" % "hadoop-yarn-server-tests" % hadoopVersionForHive2 % "test" classifier "tests",
-      "org.apache.hive" % "hive-cli" % hive2Version % "test" excludeAll(
-        ExclusionRule("ch.qos.logback", "logback-classic"),
-        ExclusionRule("org.pentaho", "pentaho-aggdesigner-algorithm"),
-        ExclusionRule("org.apache.hive", "hive-exec"),
-        ExclusionRule(organization = "org.eclipse.jetty"),
-        ExclusionRule(organization = "com.google.protobuf")
-      ),
-      "org.apache.hadoop" % "hadoop-yarn-common" % hadoopVersionForHive2 % "test",
-      "org.apache.hadoop" % "hadoop-yarn-api" % hadoopVersionForHive2 % "test",
-      "org.apache.tez" % "tez-mapreduce" % tezVersionForHive2 % "test",
-      "org.apache.tez" % "tez-dag" % tezVersionForHive2 % "test",
-      "org.apache.tez" % "tez-tests" % tezVersionForHive2 % "test" classifier "tests",
-      "com.esotericsoftware" % "kryo-shaded" % "4.0.2" % "test",
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test"
-    )
-  )
-
-/**
- * We want to publish the `standalone` project's shaded JAR (created from the
- * build/sbt standalone/assembly command).
- *
- * However, build/sbt standalone/publish and build/sbt standalone/publishLocal will use the
- * non-shaded JAR from the build/sbt standalone/package command.
- *
- * So, we create an impostor, cosmetic project used only for publishing.
- *
- * build/sbt standalone/package
- * - creates connectors/standalone/target/scala-2.12/delta-standalone-original-shaded_2.12-0.2.1-SNAPSHOT.jar
- *   (this is the shaded JAR we want)
- *
- * build/sbt standaloneCosmetic/publishM2
- * - packages the shaded JAR (above) and then produces:
- * -- .m2/repository/io/delta/delta-standalone_2.12/0.2.1-SNAPSHOT/delta-standalone_2.12-0.2.1-SNAPSHOT.pom
- * -- .m2/repository/io/delta/delta-standalone_2.12/0.2.1-SNAPSHOT/delta-standalone_2.12-0.2.1-SNAPSHOT.jar
- * -- .m2/repository/io/delta/delta-standalone_2.12/0.2.1-SNAPSHOT/delta-standalone_2.12-0.2.1-SNAPSHOT-sources.jar
- * -- .m2/repository/io/delta/delta-standalone_2.12/0.2.1-SNAPSHOT/delta-standalone_2.12-0.2.1-SNAPSHOT-javadoc.jar
- */
-lazy val standaloneCosmetic = project
-  .dependsOn(storage) // this doesn't impact the output artifact (jar), only the pom.xml dependencies
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings(
-    name := "delta-standalone",
-    commonSettings,
-    releaseSettings,
-    exportJars := true,
-    Compile / packageBin := (standaloneParquet / assembly).value,
-    Compile / packageSrc := (standalone / Compile / packageSrc).value,
-    libraryDependencies ++= scalaCollectionPar(scalaVersion.value) ++ Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersion % "provided",
-      "org.apache.parquet" % "parquet-hadoop" % "1.12.3" % "provided",
-      // parquet4s-core dependencies that are not shaded are added with compile scope.
-      "com.chuusai" %% "shapeless" % "2.3.4",
-      "org.scala-lang.modules" %% "scala-collection-compat" % "2.4.3"
-    )
-  )
-
-lazy val testStandaloneCosmetic = (project in file("connectors/testStandaloneCosmetic"))
-  .dependsOn(standaloneCosmetic)
-  .dependsOn(goldenTables % "test")
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings(
-    name := "test-standalone-cosmetic",
-    commonSettings,
-    skipReleaseSettings,
-    libraryDependencies ++= Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersion,
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test",
-    )
-  )
-
-/**
- * A test project to verify `ParquetSchemaConverter` APIs are working after the user provides
- * `parquet-hadoop`. We use a separate project because we want to test whether Delta Standlone APIs
- * except `ParquetSchemaConverter` are working without `parquet-hadoop` in testStandaloneCosmetic`.
- */
-lazy val testParquetUtilsWithStandaloneCosmetic = project.dependsOn(standaloneCosmetic)
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings(
-    name := "test-parquet-utils-with-standalone-cosmetic",
-    commonSettings,
-    skipReleaseSettings,
-    libraryDependencies ++= Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersion,
-      "org.apache.parquet" % "parquet-hadoop" % "1.12.3" % "provided",
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test",
-    )
-  )
-
-def scalaCollectionPar(version: String) = version match {
-  case v if v.startsWith("2.13.") =>
-    Seq("org.scala-lang.modules" %% "scala-parallel-collections" % "1.0.4")
-  case _ => Seq()
-}
-
-/**
- * The public API ParquetSchemaConverter exposes Parquet classes in its methods so we cannot apply
- * shading rules on it. However, sbt-assembly doesn't allow excluding a single file. Hence, we
- * create a separate project to skip the shading.
- */
-lazy val standaloneParquet = (project in file("connectors/standalone-parquet"))
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .dependsOn(standaloneWithoutParquetUtils)
-  .settings(
-    name := "delta-standalone-parquet",
-    commonSettings,
-    skipReleaseSettings,
-    libraryDependencies ++= Seq(
-      "org.apache.parquet" % "parquet-hadoop" % "1.12.3" % "provided",
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test"
-    ),
-    assemblyPackageScala / assembleArtifact := false
-  )
-
-/** A dummy project to allow `standaloneParquet` depending on the shaded standalone jar. */
-lazy val standaloneWithoutParquetUtils = project
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings(
-    name := "delta-standalone-without-parquet-utils",
-    commonSettings,
-    skipReleaseSettings,
-    exportJars := true,
-    Compile / packageBin := (standalone / assembly).value
-  )
-
-// TODO scalastyle settings
-lazy val standalone = (project in file("connectors/standalone"))
-  .dependsOn(storage % "compile->compile;provided->provided")
-  .dependsOn(goldenTables % "test")
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings(
-    name := "delta-standalone-original",
-    commonSettings,
-    skipReleaseSettings,
-    standaloneMimaSettings,
-    // When updating any dependency here, we should also review `pomPostProcess` in project
-    // `standaloneCosmetic` and update it accordingly.
-    libraryDependencies ++= scalaCollectionPar(scalaVersion.value) ++ Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersion % "provided",
-      "com.github.mjakubowski84" %% "parquet4s-core" % parquet4sVersion excludeAll (
-        ExclusionRule("org.slf4j", "slf4j-api")
-        ),
-      "com.fasterxml.jackson.module" %% "jackson-module-scala" % "2.12.3",
-      "org.json4s" %% "json4s-jackson" % "3.7.0-M11" excludeAll (
-        ExclusionRule("com.fasterxml.jackson.core"),
-        ExclusionRule("com.fasterxml.jackson.module")
-      ),
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test",
-    ),
-    Compile / sourceGenerators += Def.task {
-      val file = (Compile / sourceManaged).value / "io" / "delta" / "standalone" / "package.scala"
-      IO.write(file,
-        s"""package io.delta
-           |
-           |package object standalone {
-           |  val VERSION = "${version.value}"
-           |  val NAME = "Delta Standalone"
-           |}
-           |""".stripMargin)
-      Seq(file)
-    },
-
-    /**
-     * Standalone packaged (unshaded) jar.
-     *
-     * Build with `build/sbt standalone/package` command.
-     * e.g. connectors/standalone/target/scala-2.12/delta-standalone-original-unshaded_2.12-0.2.1-SNAPSHOT.jar
-     */
-    artifactName := { (sv: ScalaVersion, module: ModuleID, artifact: Artifact) =>
-      artifact.name + "-unshaded" + "_" + sv.binary + "-" + module.revision  + "." + artifact.extension
-    },
-
-    /**
-     * Standalone assembly (shaded) jar. This is what we want to release.
-     *
-     * Build with `build/sbt standalone/assembly` command.
-     * e.g. connectors/standalone/target/scala-2.12/delta-standalone-original-shaded_2.12-0.2.1-SNAPSHOT.jar
-     */
-    assembly / logLevel := Level.Info,
-    assembly / test := {},
-    assembly / assemblyJarName := s"${name.value}-shaded_${scalaBinaryVersion.value}-${version.value}.jar",
-    // We exclude jars first, and then we shade what is remaining. Note: the input here is only
-    // `libraryDependencies` jars, not `.dependsOn(_)` jars.
-    assembly / assemblyExcludedJars := {
-      val cp = (assembly / fullClasspath).value
-      val allowedPrefixes = Set("META_INF", "io", "json4s", "jackson", "paranamer",
-        "parquet4s", "parquet-", "audience-annotations", "commons-pool")
-      cp.filter { f =>
-        !allowedPrefixes.exists(prefix => f.data.getName.startsWith(prefix))
-      }
-    },
-    assembly / assemblyShadeRules := Seq(
-      ShadeRule.rename("com.fasterxml.jackson.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("com.thoughtworks.paranamer.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("org.json4s.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("com.github.mjakubowski84.parquet4s.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("org.apache.commons.pool.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("org.apache.parquet.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("shaded.parquet.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("org.apache.yetus.audience.**" -> "shadedelta.@0").inAll
-    ),
-    assembly / assemblyMergeStrategy := {
-      // Discard `module-info.class` to fix the `different file contents found` error.
-      // TODO Upgrade SBT to 1.5 which will do this automatically
-      case "module-info.class" => MergeStrategy.discard
-      // Discard unused `parquet.thrift` so that we don't conflict the file used by the user
-      case "parquet.thrift" => MergeStrategy.discard
-      // Discard the jackson service configs that we don't need. These files are not shaded so
-      // adding them may conflict with other jackson version used by the user.
-      case PathList("META-INF", "services", xs @ _*) => MergeStrategy.discard
-      // This project `.dependsOn` delta-storage, and its classes will be included by default
-      // in this assembly jar. Manually discard them since it is already a compile-time dependency.
-      case PathList("io", "delta", "storage", xs @ _*) => MergeStrategy.discard
-      case x =>
-        val oldStrategy = (assembly / assemblyMergeStrategy).value
-        oldStrategy(x)
-    },
-    assembly / artifact := {
-      val art = (assembly / artifact).value
-      art.withClassifier(Some("assembly"))
-    },
-    addArtifact(assembly / artifact, assembly),
-
-    // Unidoc setting
-    unidocSourceFilePatterns += SourceFilePattern("io/delta/standalone/"),
-    javaCheckstyleSettings("dev/connectors-checkstyle.xml")
-  ).configureUnidoc()
-
-
-/*
-TODO (TD): Tests are failing for some reason
-lazy val compatibility = (project in file("connectors/oss-compatibility-tests"))
-  // depend on standalone test codes as well
-  .dependsOn(standalone % "compile->compile;test->test")
-  .dependsOn(spark % "test -> compile")
-  .settings(
-    name := "compatibility",
-    commonSettings,
-    skipReleaseSettings,
-    libraryDependencies ++= Seq(
-      // Test Dependencies
-      "io.netty" % "netty-buffer"  % "4.1.63.Final" % "test",
-      "org.scalatest" %% "scalatest" % "3.1.0" % "test",
-      "commons-io" % "commons-io" % "2.8.0" % "test",
-      "org.apache.spark" %% "spark-sql" % defaultSparkVersion % "test",
-      "org.apache.spark" %% "spark-catalyst" % defaultSparkVersion % "test" classifier "tests",
-      "org.apache.spark" %% "spark-core" % defaultSparkVersion % "test" classifier "tests",
-      "org.apache.spark" %% "spark-sql" % defaultSparkVersion % "test" classifier "tests",
-    )
-  )
- */
 
 lazy val goldenTables = (project in file("connectors/golden-tables"))
-  .dependsOn(spark % "test") // depends on delta-spark
   .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
   .settings(
     name := "golden-tables",
@@ -1477,158 +1373,14 @@ lazy val goldenTables = (project in file("connectors/golden-tables"))
       // Test Dependencies
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
       "commons-io" % "commons-io" % "2.8.0" % "test",
+
+      "io.delta" %% "delta-spark" % "3.3.2" % "test",
       "org.apache.spark" %% "spark-sql" % defaultSparkVersion % "test",
       "org.apache.spark" %% "spark-catalyst" % defaultSparkVersion % "test" classifier "tests",
       "org.apache.spark" %% "spark-core" % defaultSparkVersion % "test" classifier "tests",
       "org.apache.spark" %% "spark-sql" % defaultSparkVersion % "test" classifier "tests"
     )
   )
-
-def sqlDeltaImportScalaVersion(scalaBinaryVersion: String): String = {
-  scalaBinaryVersion match {
-    // sqlDeltaImport doesn't support 2.11. We return 2.12 so that we can resolve the dependencies
-    // but we will not publish sqlDeltaImport with Scala 2.11.
-    case "2.11" => "2.12"
-    case _ => scalaBinaryVersion
-  }
-}
-
-lazy val sqlDeltaImport = (project in file("connectors/sql-delta-import"))
-  .dependsOn(spark)
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings (
-    name := "sql-delta-import",
-    commonSettings,
-    skipReleaseSettings,
-    publishArtifact := scalaBinaryVersion.value != "2.11",
-    Test / publishArtifact := false,
-    libraryDependencies ++= Seq(
-      "io.netty" % "netty-buffer"  % "4.1.63.Final" % "test",
-      "org.apache.spark" % ("spark-sql_" + sqlDeltaImportScalaVersion(scalaBinaryVersion.value)) % defaultSparkVersion % "provided",
-      "org.rogach" %% "scallop" % "3.5.1",
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test",
-      "com.h2database" % "h2" % "1.4.200" % "test",
-      "org.apache.spark" % ("spark-catalyst_" + sqlDeltaImportScalaVersion(scalaBinaryVersion.value)) % defaultSparkVersion % "test",
-      "org.apache.spark" % ("spark-core_" + sqlDeltaImportScalaVersion(scalaBinaryVersion.value)) % defaultSparkVersion % "test",
-      "org.apache.spark" % ("spark-sql_" + sqlDeltaImportScalaVersion(scalaBinaryVersion.value)) % defaultSparkVersion % "test"
-    )
-  )
-
-def flinkScalaVersion(scalaBinaryVersion: String): String = {
-  scalaBinaryVersion match {
-    // Flink doesn't support 2.13. We return 2.12 so that we can resolve the dependencies but we
-    // will not publish Flink connector with Scala 2.13.
-    case "2.13" => "2.12"
-    case _ => scalaBinaryVersion
-  }
-}
-
-lazy val flink = (project in file("connectors/flink"))
-  .dependsOn(standaloneCosmetic % "provided")
-  .dependsOn(kernelApi)
-  .dependsOn(kernelDefaults)
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings (
-    name := "delta-flink",
-    commonSettings,
-    releaseSettings,
-    flinkMimaSettings,
-    publishArtifact := scalaBinaryVersion.value == "2.12", // only publish once
-    autoScalaLibrary := false, // exclude scala-library from dependencies
-    Test / publishArtifact := false,
-    pomExtra :=
-      <url>https://github.com/delta-io/delta</url>
-        <scm>
-          <url>git@github.com:delta-io/delta.git</url>
-          <connection>scm:git:git@github.com:delta-io/delta.git</connection>
-        </scm>
-        <developers>
-          <developer>
-            <id>pkubit-g</id>
-            <name>Paweł Kubit</name>
-            <url>https://github.com/pkubit-g</url>
-          </developer>
-          <developer>
-            <id>kristoffSC</id>
-            <name>Krzysztof Chmielewski</name>
-            <url>https://github.com/kristoffSC</url>
-          </developer>
-        </developers>,
-    crossPaths := false,
-    libraryDependencies ++= Seq(
-      "org.apache.flink" % "flink-parquet" % flinkVersion % "provided",
-      "org.apache.flink" % "flink-table-common" % flinkVersion % "provided",
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersion % "provided",
-      "org.apache.flink" % "flink-connector-files" % flinkVersion % "provided",
-      "org.apache.flink" % "flink-table-runtime" % flinkVersion % "provided",
-      "org.apache.flink" % "flink-scala_2.12" % flinkVersion % "provided",
-      "org.apache.flink" % "flink-connector-hive_2.12" % flinkVersion % "provided",
-      "org.apache.flink" % "flink-table-planner_2.12" % flinkVersion % "provided",
-
-      "org.apache.flink" % "flink-connector-files" % flinkVersion % "test" classifier "tests",
-      "org.apache.flink" % "flink-runtime-web" % flinkVersion % "test",
-      "org.apache.flink" % "flink-sql-gateway-api" % flinkVersion % "test",
-      "org.apache.flink" % "flink-connector-test-utils" % flinkVersion % "test",
-      "org.apache.flink" % "flink-clients" % flinkVersion % "test",
-      "org.apache.flink" % "flink-test-utils" % flinkVersion % "test",
-      "org.apache.hadoop" % "hadoop-common" % hadoopVersion % "test" classifier "tests",
-      "org.mockito" % "mockito-inline" % "4.11.0" % "test",
-      "net.aichler" % "jupiter-interface" % JupiterKeys.jupiterVersion.value % Test,
-      "org.junit.vintage" % "junit-vintage-engine" % "5.8.2" % "test",
-      "org.mockito" % "mockito-junit-jupiter" % "4.11.0" % "test",
-      "org.junit.jupiter" % "junit-jupiter-params" % "5.8.2" % "test",
-      "io.github.artsok" % "rerunner-jupiter" % "2.1.6" % "test",
-
-      // Exclusions due to conflicts with Flink's libraries from table planer, hive, calcite etc.
-      "org.apache.hive" % "hive-metastore" % "3.1.2" % "test" excludeAll(
-        ExclusionRule("org.apache.avro", "avro"),
-        ExclusionRule("org.slf4j", "slf4j-log4j12"),
-        ExclusionRule("org.pentaho"),
-        ExclusionRule("org.apache.hbase"),
-        ExclusionRule("org.apache.hbase"),
-        ExclusionRule("co.cask.tephra"),
-        ExclusionRule("com.google.code.findbugs", "jsr305"),
-        ExclusionRule("org.eclipse.jetty.aggregate", "module: 'jetty-all"),
-        ExclusionRule("org.eclipse.jetty.orbit", "javax.servlet"),
-        ExclusionRule("org.apache.parquet", "parquet-hadoop-bundle"),
-        ExclusionRule("com.tdunning", "json"),
-        ExclusionRule("javax.transaction", "transaction-api"),
-        ExclusionRule("'com.zaxxer", "HikariCP"),
-      ),
-      // Exclusions due to conflicts with Flink's libraries from table planer, hive, calcite etc.
-      "org.apache.hive" % "hive-exec" % "3.1.2" % "test" classifier "core" excludeAll(
-        ExclusionRule("'org.apache.avro", "avro"),
-        ExclusionRule("org.slf4j", "slf4j-log4j12"),
-        ExclusionRule("org.pentaho"),
-        ExclusionRule("com.google.code.findbugs", "jsr305"),
-        ExclusionRule("org.apache.calcite.avatica"),
-        ExclusionRule("org.apache.calcite"),
-        ExclusionRule("org.apache.hive", "hive-llap-tez"),
-        ExclusionRule("org.apache.logging.log4j"),
-        ExclusionRule("com.google.protobuf", "protobuf-java"),
-      ),
-    ),
-    // generating source java class with version number to be passed during commit to the DeltaLog as engine info
-    // (part of transaction's metadata)
-    Compile / sourceGenerators += Def.task {
-      val file = (Compile / sourceManaged).value / "io" / "delta" / "flink" / "internal" / "Meta.java"
-      IO.write(file,
-        s"""package io.delta.flink.internal;
-           |
-           |public final class Meta {
-           |    public static final String FLINK_VERSION = "${flinkVersion}";
-           |    public static final String CONNECTOR_VERSION = "${version.value}";
-           |}
-           |""".stripMargin)
-      Seq(file)
-    },
-
-    // Unidoc settings
-    unidocSourceFilePatterns += SourceFilePattern("io/delta/flink/"),
-    // TODO: this is the config that was used before archiving connectors but it has
-    //  standalone-specific import orders
-    javaCheckstyleSettings("dev/connectors-checkstyle.xml")
-  ).configureUnidoc()
 
 /**
  * Get list of python files and return the mapping between source files and target paths
@@ -1658,7 +1410,7 @@ val createTargetClassesDir = taskKey[Unit]("create target classes dir")
 
 // Don't use these groups for any other projects
 lazy val sparkGroup = project
-  .aggregate(spark, kernelSpark, contribs, storage, storageS3DynamoDB, sharing, hudi)
+  .aggregate(spark, sparkV1, sparkV1Filtered, sparkV2, contribs, sparkUnityCatalog, storage, storageS3DynamoDB, hudi, sharing, connectCommon, connectClient, connectServer)
   .settings(
     // crossScalaVersions must be set to Nil on the aggregating project
     crossScalaVersions := Nil,
@@ -1676,7 +1428,7 @@ lazy val icebergGroup = project
   )
 
 lazy val kernelGroup = project
-  .aggregate(kernelApi, kernelDefaults)
+  .aggregate(kernelApi, kernelDefaults, kernelBenchmarks)
   .settings(
     // crossScalaVersions must be set to Nil on the aggregating project
     crossScalaVersions := Nil,
@@ -1728,17 +1480,17 @@ lazy val releaseSettings = Seq(
   // TODO: This isn't working yet ...
   sonatypeProfileName := "io.delta", // sonatype account domain name prefix / group ID
   credentials += Credentials(
-    "Sonatype Nexus Repository Manager",
-    "oss.sonatype.org",
+    "OSSRH Staging API Service",
+    "ossrh-staging-api.central.sonatype.com",
     sys.env.getOrElse("SONATYPE_USERNAME", ""),
     sys.env.getOrElse("SONATYPE_PASSWORD", "")
   ),
   publishTo := {
-    val nexus = "https://oss.sonatype.org/"
+    val ossrhBase = "https://ossrh-staging-api.central.sonatype.com/"
     if (isSnapshot.value) {
-      Some("snapshots" at nexus + "content/repositories/snapshots")
+      Some("snapshots" at ossrhBase + "content/repositories/snapshots")
     } else {
-      Some("releases"  at nexus + "service/local/staging/deploy/maven2")
+      Some("releases"  at ossrhBase + "service/local/staging/deploy/maven2")
     }
   },
   licenses += ("Apache-2.0", url("http://www.apache.org/licenses/LICENSE-2.0")),
@@ -1800,7 +1552,7 @@ lazy val releaseSettings = Seq(
 // Looks like some of release settings should be set for the root project as well.
 publishArtifact := false  // Don't release the root project
 publish / skip := true
-publishTo := Some("snapshots" at "https://oss.sonatype.org/content/repositories/snapshots")
+publishTo := Some("snapshots" at "https://ossrh-staging-api.central.sonatype.com/content/repositories/snapshots")
 releaseCrossBuild := false  // Don't use sbt-release's cross facility
 releaseProcess := Seq[ReleaseStep](
   checkSnapshotDependencies,
@@ -1808,8 +1560,9 @@ releaseProcess := Seq[ReleaseStep](
   runTest,
   setReleaseVersion,
   commitReleaseVersion,
-  tagRelease,
-  releaseStepCommandAndRemaining("+publishSigned"),
+  tagRelease
+) ++ CrossSparkVersions.crossSparkReleaseSteps("+publishSigned") ++ Seq[ReleaseStep](
+
   // Do NOT use `sonatypeBundleRelease` - it will actually release to Maven! We want to do that
   // manually.
   //
